# butterrobot

./: .drone.yml  .env-example  .gitignore  Dockerfile.dev  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yaml  docker-build-latest.yaml  docker-build-master.yaml  docker-build-stable.yaml  poetry-dist.yaml  pytest.yaml  release.yaml
butterrobot/: __main__.py  app.py  config.py  db.py  http.py  logging.py  objects.py  plugins.py  queue.py
butterrobot/admin/: blueprint.py
butterrobot/admin/templates/: _base.j2  channel_detail.j2  channel_list.j2  channel_plugins_list.j2  index.j2  login.j2  plugin_list.j2
butterrobot/lib/: slack.py  telegram.py
butterrobot_plugins_contrib/: dev.py  fun.py
docker/: Dockerfile
docs/: README.md  contributing.md  creating-a-plugin.md  platforms.md  plugins.md
tests/: test_db.py  test_objects.py
