[tool.poetry]
name = "butterrobot"
version = "0.0.2a1"
description = "What is my purpose?"
authors = ["Felipe Martin <me@fmartingr.com>"]
license = "GPL-2.0"
packages = [
    { include = "butterrobot" },
    { include = "butterrobot_plugins_contrib" },
]
include = ["README.md"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
quart = "^0.11.3"
aiohttp = "^3.6.2"
structlog = "^20.1.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
rope = "^0.16.0"
isort = "^4.3.21"
ipdb = "^0.13.2"

[tool.poetry.plugins]
[tool.poetry.plugins."butterrobot.plugins"]
"fun.loquito" = "butterrobot_plugins_contrib.fun:LoquitoPlugin"
"dev.ping" = "butterrobot_plugins_contrib.dev:PingPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
