[tool.poetry]
name = "butterrobot"
version = "0.0.3"
description = "What is my purpose?"
authors = ["Felipe Martin <me@fmartingr.com>"]
license = "GPL-2.0"
packages = [
    { include = "butterrobot" },
    { include = "butterrobot_plugins_contrib" },
]
include = ["README.md"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
structlog = "^20.1.0"
colorama = "^0.4.3"
dice = "^3.1.0"
flask = "^1.1.2"
requests = "^2.24.0"
waitress = "^1.4.4"
dataset = "^1.3.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
rope = "^0.16.0"
isort = "^4.3.21"
ipdb = "^0.13.2"

[tool.poetry.plugins]
[tool.poetry.plugins."butterrobot.plugins"]
"fun.loquito" = "butterrobot_plugins_contrib.fun:LoquitoPlugin"
"fun.dice" = "butterrobot_plugins_contrib.fun:DicePlugin"
"fun.coin" = "butterrobot_plugins_contrib.fun:CoinPlugin"
"dev.ping" = "butterrobot_plugins_contrib.dev:PingPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
